--- a/src/pages/Home.astro
+++ b/src/pages/Home.astro
@@ -8,7 +8,7 @@ import SearchBar from '../components/SearchBar.jsx';
     <main>
         <section id="hero">
             <h1>
-                To get sarted, start writing in the search bar.
+                To get sarted, start writing an artist's name in the search bar.
             </h1>
             <section id="links">
                 <SearchBar client:load />
