--- a/src/pages/Home.astro
+++ b/src/pages/Home.astro
@@ -4,7 +4,7 @@ import SearchBar from "../components/SearchBar.jsx";
 ---
 
 <div id="container">
-  <img id="background" src={background.src} alt="" fetchpriority="high" />
+  <img id="background" src={background} alt="" fetchpriority="high" />
   <main>
     <section id="hero">
       <h1 id="hero-title">
@@ -23,7 +23,6 @@ import SearchBar from "../components/SearchBar.jsx";
     if (title) {
       title.style.transition = "opacity 0.5s ease-out";
       title.style.opacity = "0";
-
       setTimeout(() => {
         title.style.display = "none";
       }, 500);
@@ -44,8 +43,8 @@ import SearchBar from "../components/SearchBar.jsx";
 
   #container {
     font-family:
-      Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial,
-      sans-serif;
+        Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial,
+        sans-serif;
     height: 100%;
   }
 
@@ -71,6 +70,7 @@ import SearchBar from "../components/SearchBar.jsx";
   #links {
     display: flex;
     gap: 16px;
+    width: 100%;
   }
 
   #links a {
@@ -95,8 +95,8 @@ import SearchBar from "../components/SearchBar.jsx";
     color: white;
     background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
     box-shadow:
-      inset 0 0 0 1px rgba(255, 255, 255, 0.12),
-      inset 0 -2px 0 rgba(0, 0, 0, 0.24);
+        inset 0 0 0 1px rgba(255, 255, 255, 0.12),
+        inset 0 -2px 0 rgba(0, 0, 0, 0.24);
     border-radius: 10px;
   }
 
@@ -107,8 +107,8 @@ import SearchBar from "../components/SearchBar.jsx";
 
   pre {
     font-family:
-      ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
-      "DejaVu Sans Mono", monospace;
+        ui-monospace, "Cascadia Code", "Source Code Pro", Menlo, Consolas,
+        "DejaVu Sans Mono", monospace;
     font-weight: normal;
     background: linear-gradient(14deg, #d83333 0%, #f041ff 100%);
     -webkit-background-clip: text;
@@ -135,8 +135,8 @@ import SearchBar from "../components/SearchBar.jsx";
   code {
     display: inline-block;
     background:
-      linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
-      linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
+        linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
+        linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 6px 8px;
